fix table alignment. fixes #1

--- a/htdocs/oitc_styles/styles/default/style.css
+++ b/htdocs/oitc_styles/styles/default/style.css
@@ -36,8 +36,6 @@ table-layout:auto;
 border-collapse:collapse;
 empty-cells:show;
 padding:0;
-float: right;
-width:500;
 }
 
 th {
